# base64-lib

./: .gitignore  CMakeLists.txt  README.MD
include/base64-lib/: base64-lib.h
src/: base64-lib.c
test/: CMakeLists.txt
test/src/: tests.cpp
